@@ -1,6 +1,6 @@
 Package: rebook
-Version: 1.1.2
-Date: 2021-01-03
+Version: 1.1.3
+Date: 2021-01-16
 Title: Re-using Content in Bioconductor Books
 Authors@R:
     person("Aaron", "Lun", email="infinite.monkeys.with.keyboards@gmail.com", role=c("aut", "cre", "cph"))
