@@ -31,5 +31,6 @@ importFrom(methods,is)
 importFrom(methods,slot)
 importFrom(rmarkdown,render)
 importFrom(utils,capture.output)
+importFrom(utils,read.csv)
 importFrom(utils,sessionInfo)
 importFrom(utils,write.csv)
