@@ -11,6 +11,15 @@ Link to the originating chapter for the set-up code in \code{extractCached()}.
 
 \item 
 Expose \code{collapseStart()} and \code{collapseEnd()} for manual creation of collapsible chunks.
+
+\item 
+Added \code{scrapeReferences()} to scrape a \pkg{bookdown} book for references for external use.
+
+\item 
+Added \code{configureBook()} to configure a Bioconductor package as a book deployment.
+
+\item 
+Added \code{link()} to rapidly link to references in a configured Bioconductor book package.
 }}
 
 \section{Version 1.0.0}{\itemize{
